--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
+  "type": "module",
   "name": "independentanonymous",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -22,5 +23,4 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
   }
-
 }
