--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mocha": "^7.1.1",
     "mongoose": "^5.9.7",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
