--- a/app-public/package.json
+++ b/app-public/package.json
@@ -9,6 +9,9 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "evironments":{
+    "local":".env"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.0.0",
@@ -19,6 +22,7 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "dotenv": "^8.2.0",
     "fomantic-ui": "^2.8.4",
     "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
